Update pom.xml and upgrade tests to JUnit 6